tests/golden/error/cross_file_arg_mismatch/math.tg
// Helper module: defines a function that expects a Nat argument

pub fn add_one(x: Nat) -> Nat {
    x + 1
}
